# preconditioned-attention

./: .gitignore  README.md  pyproject.toml
scripts/: compare.py  train.py
src/preconditioned_attention/: __init__.py  attention.py  data.py  monitoring.py  transformer.py
tests/: test_all.py
